Align last-updated correctly, add a max-height responsive trigger

--- a/src/scss/variables.scss
+++ b/src/scss/variables.scss
@@ -3,6 +3,7 @@
 // add global variables here
 $drop-shadow-color: rgba(0, 0, 0, 0.75);
 $orange-color: #fb7516;
+$site-min-height: 420px;
 $site-max-height: 1024px;
 $mobile: 500px;
 $top-bar-size: 60px;
